kubernetes/argocd/home-assistant/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: home-assistant
  name: home-assistant
  labels:
    app: home-assistant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: home-assistant
  template:
    metadata:
      labels:
        app: home-assistant
    spec:
      nodeSelector:
        kubernetes.io/hostname: k8s-node-01
      containers:
      # - name: bluez
      #   image: ghcr.io/mysticrenji/bluez-service:latest
      #   securityContext:
      #     privileged: true
      - name: home-assistant
        image: homeassistant/home-assistant:latest
        resources:
          requests:
            memory: "256Mi"
          limits:
            memory: "512Mi"
        ports:
        - containerPort: 8123
        volumeMounts:
        - mountPath: /config
          name: config
        - mountPath: /media
          name: media-volume          
        # - mountPath: /run/dbus
        #   name: d-bus
        #   readOnly: true
        #- mountPath: /dev/video0
        #  name: cam
        securityContext:
          privileged: true
          capabilities:
            add:
              - NET_ADMIN
              - NET_RAW
              - SYS_ADMIN
      hostNetwork: true
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: home-assistant-pvc-config
      - name: media-volume
        hostPath:
          path: /tmp/media
      #  hostPath:
      #    path: /tmp/home-assistant
      #    type: DirectoryOrCreate
      # - name: d-bus
      #   hostPath:
      #     path: /run/dbus
      #- name: cam
      #  hostPath:
      #    path: /dev/video0
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mosquitto
  namespace: home-assistant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mosquitto
  template:
    metadata:
      labels:
        app: mosquitto
    spec:
      containers:
      - name: mosquitto
        image: eclipse-mosquitto:latest
        securityContext:
          privileged: true
        ports:
        - containerPort: 1883
          name: mqtt0
        - containerPort: 9001
          name: mqtt1
        volumeMounts:
        - mountPath: /mosquitto
          name: mosquitto
      volumes:
      - name: mosquitto
        persistentVolumeClaim:
          claimName: mosquitto-pvc-config
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zigbee2mqtt
spec:
  selector:
    matchLabels:
      app: zigbee2mqtt
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: zigbee2mqtt
    spec:
      nodeSelector:
        zigbee: "true"
      containers:
      - image: koenkk/zigbee2mqtt:latest
        name: zigbee2mqtt
        ports:
        - containerPort: 8080
          name: http
        securityContext:
          privileged: true
          capabilities:
            add:
              - SYS_ADMIN
        volumeMounts:
        - mountPath: /data
          name: zigbee2mqtt
        - mountPath: /dev/ttyUSB0
          name: usb
        - mountPath: /run/udev
          name: udev
      volumes:
      - name: zigbee2mqtt
        persistentVolumeClaim:
          claimName: zigbee2mqtt-pvc-data
      - name: usb
        hostPath:
          path: /dev/ttyUSB0
      - name: udev
        hostPath:
          path: /run/udev
# ---
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: bluez
#   namespace: home-assistant
# spec:
#   replicas: 1
#   selector:
#     matchLabels:
#       app: bluez
#   template:
#     metadata:
#       labels:
#         app: bluez
#     spec:
#       containers:
#       - name: bluez
#         image: ghcr.io/mysticrenji/bluez-service:v1.0.0
#         securityContext:
#           capabilities:
#             add:
#               - NET_ADMIN
#         ports:
#         - containerPort: 3000
#       hostNetwork: true
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   namespace: home-assistant
#   name: bluez-service
# spec:
#   selector:
#     app: bluez-service
#   type: NodePort
#   ports:
#   - name: http
#     protocol: TCP
#     port: 3000
#     targetPort: 3000
#     nodePort: 30095
