kubernetes/argocd/home-assistant/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: home-assistant
  name: home-assistant-http
spec:
  selector:
    app: home-assistant
  type: ClusterIP
  ports:
  - name: home-assistant-http
    protocol: TCP
    port: 80
    targetPort: 8123
---
apiVersion: v1
kind: Service
metadata:
  namespace: home-assistant
  name: mosquitto-service
spec:
  selector:
    app: mosquitto-service
  type: ClusterIP
  ports:
  - name: mqtt0
    protocol: TCP
    port: 1883
    targetPort: 1883
  - name: mqtt1
    protocol: TCP
    port: 9001
    targetPort: 9001
