kubernetes/argocd/home-assistant/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: home-assistant
  namespace: home-assistant
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: traefik-redirect-to-https@kubernetescrd
    cert-manager.io/cluster-issuer: star-home-neels-tech-issuer
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`home-assistant.home.neels.tech`)
      services:
        - name: home-assistant-http
          port: 80
  tls:
    secretName: home-assistant-home-neels-tech-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: mosquitto
  namespace: home-assistant
spec:
  routes:
    - kind: Rule
      match: Host(`mosquitto-tcp.home.neels.tech`)
      services:
        - name: mosquitto-tcp
          port: 1883
